[package]

name = "sb6"
version = "0.0.1"
authors = ["Cameron Hart <cam@bitshifter.net.nz>"]
description = "OpenGL Super Bible 6 Application Framework"

[dependencies]
log = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs.git"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
